<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_text"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Player 1 turn"
        android:textSize="42sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice">


        <Button
            android:id="@+id/c1"
            android:layout_row="2"
            android:layout_column="0"
            android:contentDescription="@string/c1_description"
            android:onClick="btnClick" />

        <Button
            android:id="@+id/c2"
            android:layout_row="2"
            android:layout_column="1"
            android:contentDescription="@string/c2_description"
            android:onClick="btnClick" />

        <Button
            android:id="@+id/c3"
            android:layout_row="2"
            android:layout_column="2"
            android:contentDescription="@string/c3_description"
            android:onClick="btnClick" />

        <Button
            android:id="@+id/b2"
            android:layout_row="1"
            android:layout_column="1"
            android:contentDescription="@string/b2_description"
            android:onClick="btnClick" />

        <Button
            android:id="@+id/a2"
            android:layout_row="0"
            android:layout_column="1"
            android:contentDescription="@string/a2_description"
            android:onClick="btnClick" />

        <Button
            android:id="@+id/a1"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/a1_description"
            android:onClick="btnClick" />

        <Button
            android:id="@+id/a3"
            android:layout_row="0"
            android:layout_column="2"
            android:contentDescription="@string/a3_description"
            android:onClick="btnClick" />

        <Button
            android:id="@+id/b1"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="@string/b1_description"
            android:onClick="btnClick" />

        <Button
            android:id="@+id/b3"
            android:layout_row="1"
            android:layout_column="2"
            android:contentDescription="@string/b3_description"
            android:onClick="btnClick" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>